@@ -1,4 +1,5 @@
 5.4.0 -> 5.4.1:
+    - jbj: drd: disable digest/libelf races for now. todo++.
     - jbj: drd: disable path/tag data races for now. todo++.
     - jbj: ugid: use the re-entrant user/group lookups.
     - jbj: valgrind: empty macros for *everything* to see the namespace.
